<resources>
    <string name="app_name">2335GroupProject</string>
    <string name="hello_message">Hello</string>
    <string name="check_weather">Check the weather by city</string>
    <string name="saved_forecasts">My forecasts</string>
    <string name="search_hint">Search city</string>
    <string name="search_btn">Search</string>
    <string name="delete_btn">Delete</string>
    <string name="save_btn">Save</string>


    <string name="kitten_instruction">Instruction</string>
    <string name="kitten_detail">1. Enter a width and height in the text box, whole number only decimal numbers are not accepted.\n2. After entering the width and height, press enter then a kitten picture that match the width and height that the user entered will show up on the screen.\n3. Press the save button will save the last width and height that the user entered.\n4. Click on one of the Kitten picture will show you a detail page with the kitten picture and the width, height and date of the picture loaded.\n5. Click on the add to favourite button to save a kitten picture to the favourite list.\n6. Click on the toolbar on the top right corner to view the favourite list.</string>
    <string name="kitten_enter_btn">Enter</string>
    <string name="kittin_save_btn">Save</string>
    <string name="kitten_width">Width: </string>
    <string name="kitten_height">Height: </string>
    <string name="kitten_width_hint">Enter Width Here</string>
    <string name="kittin_height_hint">Enter Height Here</string>
    <string name="kitten_confirmation">Confirmation</string>
    <string name="kitten_AlertDialog_Message">Do you want to save the text that you entered?</string>
    <string name="kitten_Snackbar">You have save the text successfully!</string>
    <string name="kitten_No">No</string>
    <string name="kitten_ok">Okay</string>
    <string name="kitten_yes">Yes</string>
    <string name="kitten_toastMessage_width">The width of this image is </string>
    <string name="kitten_toastMessage_height">The height of this image is </string>
    <string name="kitten_add_btn">add to favourite</string>
    <string name="kitten_remove_btn">remove</string>
    <string name="kitten_database_id">database id goes here</string>
    <string name="kitten_fragmentTriger">Click the image to see detail</string>
    <string name="kitten_imageSavedInfo">Image has been added to favorites</string>
    <string name="kitten_favourite">My Favourite Images</string>
    <string name="kitten_favourite_remove">Do you want to remove this picture from your favourite list?</string>
    <string name="kitten_imgaeRemove">Image has been remove from the favorites list</string>
    <string name="kitten_favourite_toolbar">View Favourites</string>

    <string name="topicenter">Enter the topic your are interested in</string>
    <string name="search_articles">Search Articles</string>
    <string name="search_history">Search History</string>
    <string name="instruction">Instruction</string>
    <string name="choose_topic">Please choose the topic.</string>
    <string name="details">1. Type in a keyword or phrase related to the topic you are interested in.
        2. Hit the search button and browse the search results: it will display a list of search results based on your keyword or phrase.
        3. If you are not finding what you are looking for, try refining your search by using more specific keywords or phrases.
        4. Click on a search result to view more information: Once you find a search result that interests you, click on it to view more information.
        5. Save or share the information: If you find something useful, you can save it for future reference or share it with others using the app is sharing features.</string>
    <string name="question">Question</string>
    <string name="confirm">Do you want to delete the message:</string>
    <string name="deleted">You deleted message #</string>
    <string name="undo">Undo</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>


    <string name="humidity">"Humidity: "</string>
    <string name="feels_like">"Feels like: "</string>
    <string name="wind">"Wind speed: "</string>
    <string name="help">Help</string>
    <string name="weather_instructions">To search for a forecast, type in the name of the city you want to get the forecast for, then tap the \"Search\" button. To get more details about a saved forecast, tap on a forecast under \"My forecasts\". To delete a saved forecast, tap the \"Delete\" button, then select \"Yes\".</string>
    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>
    <string name="weather_help">Instructions</string>
    <string name="kitten_bar">Kitten Images</string>
    <string name="nasa_bar">Nasa Images</string>
    <string name="nyt_bar">New York Times</string>
    <string name="delete_forecast_msg">Do you want to delete this forecast?</string>
    <string name="delete_forecast_title">Delete saved forecast:</string>
    <string name="forecast_deleted">Forecast successfully deleted!</string>
    <string name="weather_response_instructions">To save the forecast, tap on the \"Save button\".</string>
    <string name="forecast_saved">Forecast successfully saved!</string>
    <string name="forecast_error">Failed to retrieve forecast for:</string>
    <string name="visibility">"Visibility: "</string>
    <string name="uv_index">"UV index: "</string>

</resources>